# roboxai-stl-npc

./: .gitignore  .ruff.toml  README.md  environment.yml  pyproject.toml  train.log.test
UnityEnvs/RoverROS/: Assembly-CSharp.csproj
UnityEnvs/RoverROS/Logs/: ApiUpdaterCheck.txt
UnityEnvs/RoverROS/ProjectSettings/: TagManager.asset
UnityEnvs/RoverROS/Recordings/: movie_020.webm  movie_021.webm
UnityEnvs/RoverROS/Temp/: workerlic
UnityEnvs/RoverROS/UserSettings/: EditorUserSettings.asset
UnityEnvs/TestingRoverDDQN/ProjectSettings/: ProjectSettings.asset
UnityEnvs/TestingRoverSTL/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityEnvs/UnityRoverEnvs/ProjectSettings/: ProjectSettings.asset
UnityEnvs/UnityTrainingRoverSTLEnv/ProjectSettings/: TagManager.asset
UnityRoverEnv/: Assembly-CSharp.csproj  turtlebot3UnityDDQN.sln  turtlebot3UnityDQN.sln
UnityRoverEnv/Temp/: Assembly-CSharp.dll.hash  CompilationLog.txt  UnityTempFile-54f6f32a7c1bcadfba5e794087314fee  UnityTempFile-d2ed5588876bd3bd6ae0aae6e462889d
UnityRoverEnv/UserSettings/: EditorUserSettings.asset
UnityRoverEnvs/: .gitignore
src/: Results.md  metrics.py  rover_navigation.py  rover_navigation_test.py
src/DQN/: config.py  test_unity.py  testing.py  testing_DQN_env.py  training.py  training_DQN_env.py
src/STL/: config.py  exap_model.pth  exap_model_0.1680000126361847.pth  generate_datasets.py  rover_navigation.py  test.py  test_graphic.py  test_unity.py  test_vectorized.py  test_video.py  training copy.py  training.py
src/stl_rover/: package.xml  setup.cfg  setup.py
(+2692 files in other folders)
