[project]
name = "STL-rover"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heisenberga", email = "davideberga0@gmail.com"},
]
dependencies = ["setuptools>=75.3.0", "tensorflow==2.8.0"]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dqn = "ros2 run stl_rover DQN"

[tool.pdm]
distribution = false
